--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
+  "homepage":"git@github.com:chitranshi08/weather-app",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy":"node vue-gh-pages"
   },
   "dependencies": {
     "core-js": "^3.6.4",
